# PatchPilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  package-lock.json  package.json  requirements.txt  setup_ai.sh  tailwind.config.js  vite.config.js
backend/: chatbot.py  processor.py
public/: index.html
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AIProgressTracker.jsx  AISetupModal.jsx  ChatInterface.jsx  ChatSidebar.jsx  CodeEditor.jsx  DirectoryUploader.jsx  FilePicker.jsx  FileTracker.jsx  InfoModal.jsx  LoadingScreen.jsx  MarkdownRenderer.jsx  NewFileModal.jsx  UpdateModal.jsx
src/services/: aiService.js  chatbotService.js  contextAwareAiService.js  enhancedAiService.js  updateService.js
src/utils/: browserPath.js  fileTree.js  sanitizeHTML.js  storageUtils.js
tests/: pathHandling.test.js  updateService.test.js
