[package]
name = "patchpilot"
version = "1.0.0"
description = "Easily fix your code."
authors = ["Coropos Web Services"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "5.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.38", features = ["full"] }  # ✅ Add this line

[dependencies.tauri-plugin-dialog]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[dependencies.tauri-plugin-fs]
git = "https://github.com/tauri-apps/plugins-workspace" 
branch = "v2"
